feat: geo helpers enemy_start_position start_position
Enemy start position was nested deeply and not friendly.
Own start position relies on checking your own main hq, which might be dead. Using camera start position on frame 0 instead.

--- a/lib/templates/new/my_bot.rb.tt
+++ b/lib/templates/new/my_bot.rb.tt
@@ -10,8 +10,7 @@ class <%= @classname %> < Sc2::Player::Bot
 
   def on_step
     if game_loop == 0
-      enemy_start_pos = game_info.start_raw.start_locations.first
-      units.workers.attack(target: enemy_start_pos)
+      units.workers.attack(target: geo.enemy_start_position)
     end
 
     # If your attack fails, "good game" and exit
